[tool.poetry]
name = "zero_saver"
version = "0.1.0"
description = "The user interface of zero_saver."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
zero-saver-core = {git = "https://github.com/ImplyingICheck/Zero-Saver-Core"}
customtkinter = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pytest = "^7.3.1"
pyright = "^1.1.314"
pre-commit = "^3.3.3"
pytest-cases = "^3.6.14"
pytest-mock = "^3.11.1"
pyink = "^23.5.0"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src cases"
markers = [
    "slow: marks slow-running tests",
    "io: marks tests using external IO dependencies",
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["dev_files/*.py"]
strict = ["src/"]
reportMissingImports = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
